# Syringa

./: CMakeLists.txt  Makefile  README.md  main.cpp  syringa.hpp
include/: builtin.hpp  const.hpp  debug.hpp  error.hpp  help.hpp  lexer.hpp  node.hpp  parser.hpp  position.hpp  symboltable.hpp  token.hpp  types.hpp
interpreter/: interpreter.cpp  interpreter.hpp
object/: function.cpp  function.hpp  init_builtin.cpp  make.cpp  make.hpp  module.cpp  module.hpp  object.cpp  object.hpp  objects.hpp  others.hpp  pointer.cpp  pointer.hpp
src/: builtin.cpp  lexer.cpp  node.cpp  parser.cpp  position.cpp  symboltable.cpp  token.cpp
